feat(phase4): Implement Nexus Network & Context Kernel
- Networking: Added Tailscale sidecar container and setup script.
- Auth: Implemented PolicyMatrix and AuditInterceptor RBAC checks.
- Core: Added 'context' field to AgentState.
- Docs: Updated Architecture and Implementation Plan for Phase 4.

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,10 @@ STT_API_KEY=sk-local-test
 # ============================================
 # DATABASE_URL=postgresql+asyncpg://nexus:nexus_password@postgres:5432/nexus_db
 # REDIS_URL=redis://redis:6379/0
+
+# ============================================
+# Network Configuration (Tailscale)
+# ============================================
+# Generate via: https://login.tailscale.com/admin/settings/keys
+# Recommended: Reusable, Ephemeral (if testing), Tagged (tag:nexus-agent)
+TAILSCALE_AUTH_KEY=tskey-auth-example-123456
