feat: stabilize agent with telegram fix, error sanitization, and test suite
- Fix: Telegram trace_id UUID mismatch panic
- Fix: SQLAlchemy verbose logging noise
- Feat: Dynamic Agent System Prompt with Tool Categorization
- Feat: Force LLM language consistency constraint
- Feat: Error Sanitization to prevent internal stack traces leaking to LLM
- Fix: Tailscale log uploads disabled
- Infra: Added pytest/ruff test suite and smoke tests

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,15 @@ EMBEDDING_DIMENSION=512
 STT_BASE_URL=http://host.docker.internal:9191/v1
 STT_API_KEY=sk-local-test
 
+# HomeAssistant Integration (Optional)
+HOMEASSISTANT_URL=http://host.docker.internal:8123
+HOMEASSISTANT_TOKEN=your_long_lived_access_token
+
+# Telegram Bot Interface
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_ALLOWED_USERS=12345678,87654321
+TELEGRAM_PROXY_URL=http://host.docker.internal:7890
+
 # ============================================
 # Database (Auto-configured in docker-compose)
 # ============================================
