--- a/mcp_server_config.json
+++ b/mcp_server_config.json
@@ -6,8 +6,24 @@
             "args": [
                 "/app/external_mcp/mcp-homeassistant/build/index.js"
             ],
+            "env": {
+                "HASSIO_TOKEN": "${HOMEASSISTANT_TOKEN}",
+                "HASSIO_URL": "${HOMEASSISTANT_URL}"
+            },
             "enabled": true,
-            "source": "hybrid"
+            "source": "hybrid",
+            "system_instruction": "### HOME ASSISTANT EXPERT RULES\n1. **AUTONOMOUS SEARCH**: If Entity ID is unknown, use `list_entities` first. DO NOT ask user.\n2. **BEHAVIOR**: Be proactive. If user says 'lights on', find them and turn them on.\n3. **DATA HANDLING**: If `list_entities` returns a file path, you MUST use `python_sandbox` to filter it.",
+            "tool_config": {
+                "list_entities": {
+                    "cache_ttl": 1800
+                },
+                "get_state": {
+                    "cache_ttl": 5
+                },
+                "execute_service": {
+                    "cache_ttl": 0
+                }
+            }
         },
         "demo_server": {
             "command": "python",
