feat: unified tool schema & output normalization, improved large response handling

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ docker-compose.override.yml
 
 # DB Data if locally creating folder (Docker volume is named but good practice)
 postgres_data/
+
+storage/
