--- a/mcp_server_config.json
+++ b/mcp_server_config.json
@@ -1,17 +1,9 @@
 {
     "mcpServers": {
         "homeassistant": {
-            "command": "node",
-            "cwd": "/app/external_mcp/mcp-homeassistant",
-            "args": [
-                "/app/external_mcp/mcp-homeassistant/build/index.js"
-            ],
-            "env": {
-                "HASSIO_TOKEN": "${HOMEASSISTANT_TOKEN}",
-                "HASSIO_URL": "${HOMEASSISTANT_URL}"
-            },
+            "url": "http://mcp-homeassistant:8080/sse",
+            "source": "remote",
             "enabled": true,
-            "source": "hybrid",
             "system_instruction": "### HOME ASSISTANT EXPERT RULES\n1. **AUTONOMOUS SEARCH**: If Entity ID is unknown, use `list_entities` first. DO NOT ask user.\n2. **BEHAVIOR**: Be proactive. If user says 'lights on', find them and turn them on.\n3. **DATA HANDLING**: If `list_entities` returns a file path, you MUST use `python_sandbox` to filter it.",
             "tool_config": {
                 "list_entities": {
