feat: Implement two-layer skill system architecture
- Add skills/ directory with template, homeassistant.md, python_sandbox.md
- Implement SkillLoader for loading and managing skill cards
- Implement SkillGenerator with configurable LLM (OpenAI/Anthropic/Local)
- Integrate skill cards into agent system prompt
- Add /skills/ API endpoints for CRUD operations
- Update mcp_server_config.json with correct tool names (query_entities)
- Reorganize scripts/ into admin/, debug/, dev/ subdirectories
- Add test suite expansion with 26 passing tests
- Update .env.example with skill generation config

Runtime hierarchy:
1. Agent Core (GLM-4.7-Flash) - Universal reasoning
2. Skill Cards - Domain expertise (HA, Sandbox)
3. MCP Middleware - Response handling
4. MCP Servers - Tool execution

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,15 @@ LLM_MODEL=qwen2.5:14b
 # LLM_MODEL=glm-4
 
 # ============================================
+# Skill Generation LLM (Optional)
+# ============================================
+# Use a high-quality cloud LLM for generating skill cards
+# If not set, uses the same LLM as the agent
+# SKILL_GEN_PROVIDER=openai  # openai | anthropic | local
+# SKILL_GEN_MODEL=gpt-4o     # gpt-4o | claude-3-5-sonnet | glm-4.7-flash
+# SKILL_GEN_API_KEY=sk-xxx   # Cloud API key (if different from LLM_API_KEY)
+
+# ============================================
 # Embedding Configuration
 # ============================================
 # Option 1: Local Embedding Server (Recommended)
