chore: ignore E402 and E501 in ruff, fix requirements.txt and skill generation test script linting

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ langgraph
 langchain-openai
 langchain-core
 pydantic
-python-dotenv
 redis
 httpx
 sqlmodel
@@ -23,3 +22,4 @@ pandas
 sqlalchemy
 python-telegram-bot
 python-dotenv
+aiosqlite
