--- a/.env.example
+++ b/.env.example
@@ -17,26 +17,17 @@ LLM_MODEL=qwen2.5:14b
 # ============================================
 # Skill Generation LLM (Optional)
 # ============================================
-# Use a high-quality cloud LLM for generating skill cards
-# If not set, uses the same LLM as the agent
 # SKILL_GEN_PROVIDER=openai  # openai | anthropic | local
 # SKILL_GEN_MODEL=gpt-4o     # gpt-4o | claude-3-5-sonnet | glm-4.7-flash
-# SKILL_GEN_API_KEY=sk-xxx   # Cloud API key (if different from LLM_API_KEY)
+# SKILL_GEN_API_KEY=sk-xxx   # Cloud API key
 
 # ============================================
 # Embedding Configuration
 # ============================================
-# Option 1: Local Embedding Server (Recommended)
 EMBEDDING_API_KEY=local
 EMBEDDING_BASE_URL=http://host.docker.internal:9292/v1
 EMBEDDING_MODEL=bge-small-zh-v1.5
 EMBEDDING_DIMENSION=512
-
-# Option 2: Cloud Embedding (OpenAI, GLM, etc.)
-# EMBEDDING_API_KEY=your-api-key-here
-# EMBEDDING_BASE_URL=https://api.openai.com/v1
-# EMBEDDING_MODEL=text-embedding-3-small
-# EMBEDDING_DIMENSION=1536
 
 # ============================================
 # Voice Configuration (Optional)
@@ -44,24 +35,27 @@ EMBEDDING_DIMENSION=512
 STT_BASE_URL=http://host.docker.internal:9191/v1
 STT_API_KEY=sk-local-test
 
+# ============================================
 # HomeAssistant Integration (Optional)
+# ============================================
 HOMEASSISTANT_URL=http://host.docker.internal:8123
-HOMEASSISTANT_TOKEN=your_long_lived_access_token
+HOMEASSISTANT_TOKEN=
 
+# ============================================
+# Feishu (Lark) Integration
+# ============================================
+FEISHU_APP_ID=
+FEISHU_APP_SECRET=
+FEISHU_VERIFICATION_TOKEN=
+
+# ============================================
 # Telegram Bot Interface
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-TELEGRAM_ALLOWED_USERS=12345678,87654321
+# ============================================
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_ALLOWED_USERS=
 TELEGRAM_PROXY_URL=http://host.docker.internal:7890
 
 # ============================================
-# Database (Auto-configured in docker-compose)
+# Network (Tailscale)
 # ============================================
-# DATABASE_URL=postgresql+asyncpg://nexus:nexus_password@postgres:5432/nexus_db
-# REDIS_URL=redis://redis:6379/0
-
-# ============================================
-# Network Configuration (Tailscale)
-# ============================================
-# Generate via: https://login.tailscale.com/admin/settings/keys
-# Recommended: Reusable, Ephemeral (if testing), Tagged (tag:nexus-agent)
 TAILSCALE_AUTH_KEY=tskey-auth-example-123456
