--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,54 @@
-[tool.ruff]
-# Same as Black.
-line-length = 120
+[project]
+name = "nexus-agent"
+version = "2.0.0"
+description = "Universal AI Agent Operating System with Self-Learning Capabilities"
+authors = [
+    {name = "Nexus Maintainers", email = "maintainers@nexus-agent.org"},
+]
+readme = "README.md"
+requires-python = ">=3.10"
+license = {text = "MIT"}
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
+dependencies = [
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "langgraph>=0.0.10",
+    "langchain-openai>=0.0.2",
+    "langchain-core>=0.1.0",
+    "pydantic>=2.5.0",
+    "pydantic-settings>=2.1.0",
+    "redis>=5.0.0",
+    "httpx>=0.26.0",
+    "sqlmodel>=0.0.14",
+    "psycopg2-binary>=2.9.0",
+    "alembic>=1.13.0",
+    "asyncpg>=0.29.0",
+    "docker>=7.0.0",
+    "python-multipart>=0.0.6",
+    "pgvector>=0.2.4",
+    "langchain-community>=0.0.10",
+    "streamlit>=1.30.0",
+    "pandas>=2.1.0",
+    "sqlalchemy>=2.0.0",
+    "python-telegram-bot>=20.0",
+    "python-dotenv>=1.0.0",
+    "aiosqlite>=0.19.0",
+]
 
-# Exclude a variety of commonly ignored directories.
+[tool.ruff]
+line-length = 120
 exclude = [
     ".bzr",
     ".direnv",
     ".eggs",
     ".git",
-    ".git-rewrite",
     ".hg",
     ".mypy_cache",
     ".nox",
@@ -28,15 +68,13 @@ exclude = [
 ]
 
 [tool.ruff.lint]
-# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
 select = ["E", "F", "I"]
 ignore = ["E402", "E501"]
-
-# Allow autofix for all enabled rules (when `--fix`) is provided.
-fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "RUF"]
+fixable = ["ALL"]
 unfixable = []
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
+addopts = "-v"
