--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install ruff pytest pytest-asyncio
+        pip install ruff pytest pytest-asyncio pytest-mock
         
     - name: Lint with Ruff
       run: |
