docs: update installation guide with GLM-4.7-Flash defaults and setup scripts

--- a/.env.example
+++ b/.env.example
@@ -4,21 +4,21 @@
 # ============================================
 # LLM Configuration
 # ============================================
-# Option 1: Local Ollama (Recommended for privacy)
+# Option 1: Local Ollama (Recommended)
 LLM_API_KEY=ollama
 LLM_BASE_URL=http://host.docker.internal:11434/v1
-LLM_MODEL=qwen2.5:14b
+LLM_MODEL=glm4.7-flash-32k
 
 # Option 2: Cloud Provider (GLM-4, OpenAI, DeepSeek, etc.)
 # LLM_API_KEY=your-api-key-here
 # LLM_BASE_URL=https://open.bigmodel.cn/api/paas/v4
-# LLM_MODEL=glm-4
+# LLM_MODEL=glm-4-flash
 
 # ============================================
 # Skill Generation LLM (Optional)
 # ============================================
 # SKILL_GEN_PROVIDER=openai  # openai | anthropic | local
-# SKILL_GEN_MODEL=gpt-4o     # gpt-4o | claude-3-5-sonnet | glm-4.7-flash
+# SKILL_GEN_MODEL=glm4:9b-chat-q6_K     # gpt-4o | claude-3-5-sonnet | glm-4
 # SKILL_GEN_API_KEY=sk-xxx   # Cloud API key
 
 # ============================================
