feat: Implement Identity System (Phase 20) and Fixes
- Added User Role and Policy models
- Implemented AuthService with Bind Token logic
- Created Dashboard User Management page
- Fixed Dashboard async loop issues (NullPool)
- Fixed MQService Redis loop issues
- Added basic Telegram pinning support

--- a/mcp_server_config.json
+++ b/mcp_server_config.json
@@ -21,6 +21,12 @@
                 }
             }
         },
+        "feishu": {
+            "url": "http://mcp-feishu:3333/sse",
+            "source": "remote",
+            "enabled": true,
+            "required_role": "user"
+        },
         "demo_server": {
             "command": "python",
             "args": [
