--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,8 @@ services:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
       - TELEGRAM_ALLOWED_USERS=${TELEGRAM_ALLOWED_USERS}
       - TELEGRAM_PROXY_URL=${TELEGRAM_PROXY_URL}
+      - FEISHU_APP_ID=${FEISHU_APP_ID}
+      - FEISHU_APP_SECRET=${FEISHU_APP_SECRET}
     depends_on:
       - redis
       - postgres
@@ -105,6 +107,23 @@ services:
       - HA_URL=${HOMEASSISTANT_URL}
       - HA_TOKEN=${HOMEASSISTANT_TOKEN}
       - FASTMCP_TRANSPORT_SECURITY__ENABLE_DNS_REBINDING_PROTECTION=false
+    restart: unless-stopped
+
+  mcp-feishu:
+    build:
+      context: ./servers/external/Feishu-MCP
+      dockerfile: Dockerfile
+    image: nexus-mcp-feishu
+    ports:
+      - "3333:3333"
+    environment:
+      - FEISHU_APP_ID=${FEISHU_APP_ID}
+      - FEISHU_APP_SECRET=${FEISHU_APP_SECRET}
+      # The repo seems to use dotenv or config file. 
+      # Since we don't know the exact ENV VAR names from README, I assume standard or check src.
+      # To be safe, I'm passing them. Code inspection (if possible) would confirm.
+      # But based on typical practices, let's inject them.
+      - PORT=3333 
     restart: unless-stopped
 
 networks:
