feat: implement memory retrieval, autonomous lifecycle, and admin management
- Add query_memory and forget_memory tools
- Implement autonomous memory lifecycle (save/correct/forget)
- Add role-based skill filtering for Admins
- Implement restart_system and broadcast tools for Admins
- Add proactive system error alerts for Admins
- Improve Telegram UX (interactive bind, role promotion)
- Centralize localization (EN/ZH support)

--- a/.env.example
+++ b/.env.example
@@ -1,61 +1,53 @@
-# Nexus Agent Configuration Example
-# Copy this file to .env and customize for your environment
+# ==========================================
+# Nexus Agent Configuration
+# ==========================================
 
-# ============================================
-# LLM Configuration
-# ============================================
-# Option 1: Local Ollama (Recommended)
+# 1. Infrastructure
+# -----------------
+# Tailscale Auth Key (Optional, for remote access)
+TAILSCALE_AUTH_KEY=tskey-auth-xxxx
+
+# Database & Redis (Defaults usually work for Docker)
+DATABASE_URL=postgresql+asyncpg://nexus:nexus_password@postgres:5432/nexus_db
+REDIS_URL=redis://redis:6379/0
+
+# 2. LLM Configuration (Ollama / OpenAI / VLLM)
+# ---------------------------------------------
+# Provider: 'ollama', 'openai', or 'vllm'
 LLM_API_KEY=ollama
+# URL for the LLM API (e.g., http://host.docker.internal:11434/v1 for local Ollama)
 LLM_BASE_URL=http://host.docker.internal:11434/v1
+# Model Name (e.g., qwen2.5:14b, gpt-4o)
 LLM_MODEL=glm4.7-flash-32k
 
-# Option 2: Cloud Provider (GLM-4, OpenAI, DeepSeek, etc.)
-# LLM_API_KEY=your-api-key-here
-# LLM_BASE_URL=https://open.bigmodel.cn/api/paas/v4
-# LLM_MODEL=glm-4-flash
-
-# ============================================
-# Skill Generation LLM (Optional)
-# ============================================
-# SKILL_GEN_PROVIDER=openai  # openai | anthropic | local
-# SKILL_GEN_MODEL=glm4:9b-chat-q6_K     # gpt-4o | claude-3-5-sonnet | glm-4
-# SKILL_GEN_API_KEY=sk-xxx   # Cloud API key
-
-# ============================================
-# Embedding Configuration
-# ============================================
+# 3. Embedding Configuration (RAG)
+# --------------------------------
 EMBEDDING_API_KEY=local
 EMBEDDING_BASE_URL=http://host.docker.internal:9292/v1
 EMBEDDING_MODEL=bge-small-zh-v1.5
 EMBEDDING_DIMENSION=512
 
-# ============================================
-# Voice Configuration (Optional)
-# ============================================
+# 4. Voice Configuration (STT/TTS)
+# --------------------------------
 STT_BASE_URL=http://host.docker.internal:9191/v1
 STT_API_KEY=sk-local-test
 
-# ============================================
-# HomeAssistant Integration (Optional)
-# ============================================
-HOMEASSISTANT_URL=http://host.docker.internal:8123
-HOMEASSISTANT_TOKEN=
+# 5. Integrations & Channels
+# --------------------------
 
-# ============================================
-# Feishu (Lark) Integration
-# ============================================
-FEISHU_APP_ID=
-FEISHU_APP_SECRET=
-FEISHU_VERIFICATION_TOKEN=
+# Telegram Bot
+TELEGRAM_BOT_TOKEN=123456789:ABCdefGHIjklMNOpqrsTUVwxyz
+# Comma-separated list of User IDs allowed to interact with the bot
+TELEGRAM_ALLOWED_USERS=123456789,987654321
+# Optional Proxy
+TELEGRAM_PROXY_URL=http://192.168.1.100:7890
 
-# ============================================
-# Telegram Bot Interface
-# ============================================
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_ALLOWED_USERS=
-TELEGRAM_PROXY_URL=http://host.docker.internal:7890
+# Home Assistant
+HOMEASSISTANT_URL=http://192.168.1.100:8123
+HOMEASSISTANT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
-# ============================================
-# Network (Tailscale)
-# ============================================
-TAILSCALE_AUTH_KEY=tskey-auth-example-123456
+# Feishu / Lark (Official MCP)
+# App ID (e.g., cli_a1b2c3d4e5f6)
+FEISHU_APP_ID=cli_xxxxxxxxxxxx
+# App Secret
+FEISHU_APP_SECRET=xxxxxxxxxxxxxxxxxxxxxxxx
