feat: implement self-evolution patterns (user context injection, silent/thinking protocols) and fix ollama embeddings

--- a/.env.example
+++ b/.env.example
@@ -22,10 +22,11 @@ LLM_MODEL=glm4.7-flash-32k
 
 # 3. Embedding Configuration (RAG)
 # --------------------------------
-EMBEDDING_API_KEY=local
-EMBEDDING_BASE_URL=http://host.docker.internal:9292/v1
-EMBEDDING_MODEL=bge-small-zh-v1.5
-EMBEDDING_DIMENSION=512
+# Recommended: specific Ollama model like bge-m3 (1024 dim) or nomic-embed-text (768 dim)
+EMBEDDING_API_KEY=ollama
+EMBEDDING_BASE_URL=http://host.docker.internal:11434/v1
+EMBEDDING_MODEL=bge-m3:latest
+EMBEDDING_DIMENSION=1024
 
 # 4. Voice Configuration (STT/TTS)
 # --------------------------------
