docs(env): add NEXUS_MASTER_KEY example to environment template

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,9 @@ HOMEASSISTANT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 FEISHU_APP_ID=cli_xxxxxxxxxxxx
 # App Secret
 FEISHU_APP_SECRET=xxxxxxxxxxxxxxxxxxxxxxxx
+
+# 6. Security
+# --------------------------
+# Master key for encrypting sensitive data in the database (AES-256)
+# Generate a new one using: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+NEXUS_MASTER_KEY=your_generated_fernet_key_here=
