docs: update progress report and docker configuration for Phase 40
- Add web container to docker-compose.yml
- Create multi-stage Dockerfile for Next.js web frontend
- Update progress_report.md to document the successful completion of the Next-Gen Architecture Transition

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,6 +113,18 @@ services:
       - FASTMCP_TRANSPORT_SECURITY__ENABLE_DNS_REBINDING_PROTECTION=false
     restart: unless-stopped
 
+  web:
+    build:
+      context: ./web
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:8000
+    depends_on:
+      - nexus-app
+
+
   lark-mcp:
     image: node:20-slim
     working_dir: /app
