chore(docker): hide internal ports from host machine
- Comment out ports for redis, postgres, lark-mcp, and mcp-homeassistant
- Only expose nexus-app (8000), dashboard (8501), and web (3001) to host
- Internal services communicate purely via docker network nexus-network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,7 +128,8 @@ services:
   lark-mcp:
     image: node:20-slim
     working_dir: /app
-    ports:
+    # ports:
+    #   - "3000:3000" # Internal only
       - "3000:3000"
     environment:
       - LARK_APP_ID=${FEISHU_APP_ID}
