feat(core): implement automatic initial admin provisioning
- Add logic to init_db to seed an admin user if database is completely empty
- Support INITIAL_ADMIN_USERNAME and INITIAL_ADMIN_API_KEY environment variables
- Auto-generate a secure random API key if none provided
- Print prominent ASCII warning box in startup logs to communicate initial credentials
- Update .env.example with new provisioning variables

--- a/.env.example
+++ b/.env.example
@@ -53,7 +53,15 @@ FEISHU_APP_ID=cli_xxxxxxxxxxxx
 # App Secret
 FEISHU_APP_SECRET=xxxxxxxxxxxxxxxxxxxxxxxx
 
-# 6. Security
+# 6. Initial Admin Provisioning
+# ---------------------------
+# If no users exist on first startup, an admin user will be created
+# using these values. If API_KEY is not set, a secure key will be
+# generated and displayed in the startup logs.
+INITIAL_ADMIN_USERNAME=admin
+INITIAL_ADMIN_API_KEY=your_secure_api_key_here
+
+# 7. Security
 # --------------------------
 # Master key for encrypting sensitive data in the database (AES-256)
 # Generate a new one using: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
