feat(admin): move admin key management to CLI and strictly auto-generate in DB
- Add scripts/admin/manage_user.py to list and reset API keys securely
- Update init_db to always generate a random key for the first admin (removed .env fallback)
- Remove INITIAL_ADMIN_API_KEY from .env.example to promote secure practices

--- a/.env.example
+++ b/.env.example
@@ -55,11 +55,10 @@ FEISHU_APP_SECRET=xxxxxxxxxxxxxxxxxxxxxxxx
 
 # 6. Initial Admin Provisioning
 # ---------------------------
-# If no users exist on first startup, an admin user will be created
-# using these values. If API_KEY is not set, a secure key will be
-# generated and displayed in the startup logs.
+# If no users exist on first startup, an admin user will be created.
+# Credentials will be displayed in the startup logs.
+# You can recover or reset keys using: python scripts/admin/manage_user.py --list
 INITIAL_ADMIN_USERNAME=admin
-INITIAL_ADMIN_API_KEY=your_secure_api_key_here
 
 # 7. Security
 # --------------------------
